Compare names of duplicate symbols properly, so we correctly return an error status.

Fixes PR kern/45125 with patch supplied by Akinobu  Mita